data/forge_javadoc/1.7.10/processed/net_minecraft_util_EnumChatFormatting.md
# EnumChatFormatting

**Inheritance:** java.lang.Object → java.lang.Enum<EnumChatFormatting> → net.minecraft.util.EnumChatFormatting

## Class signature

```java
public enum EnumChatFormatting extends java.lang.Enum<EnumChatFormatting>
```

## Methods

- `char getFormattingCode()`
- `java.lang.String getFriendlyName()`
- `static java.lang.String getTextWithoutFormattingCodes(java.lang.String p_110646_0_)`
- `static java.util.Collection getValidValues(boolean p_96296_0_, boolean p_96296_1_)`
- `static EnumChatFormatting getValueByName(java.lang.String p_96300_0_)`
- `boolean isColor()`
- `boolean isFancyStyling()`
- `java.lang.String toString()`
- `static EnumChatFormatting valueOf(java.lang.String name)` — Returns the enum constant of this type with the specified name.
- `static EnumChatFormatting [] values()` — Returns an array containing the constants of this enum type, in the order they are declared.